# simple-dub

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
core/: Cargo.toml
core/src/: cache.rs  commands.rs  lib.rs  media.rs  pipeline.rs  subtitles.rs  tts.rs
core/tests/: mkv_integration.rs  pipeline.rs  subtitles.rs  tts.rs
native/: piper-worker.cc
plans/: architecture.md
scripts/: build-silero-worker.ps1  check-secrets.ps1  prepare-bundle.mjs  setup-runtime.ps1
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: dubbing.rs  lib.rs  main.rs  runtime.rs  settings.rs
src-tauri/tests/: settings.rs
workers/: requirements-build.txt  silero_worker.py
