[package]
name = "simple-dub-desktop"
version = "0.1.1"
description = "Минимальный одноголосый дубляж видео"
authors = ["PurpleSloth"]
edition = "2024"
default-run = "simple-dub-desktop"

[lib]
name = "simple_dub_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
hound = "3.5"
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple-dub-core = { path = "../core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
uuid = { version = "1", features = ["v4"] }
